# brain-tumor-mri-dataset

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: predict.py
docs/: model_card.md  reproducibility.md
models/: cnn_model.keras
notebooks/: brain_tumor_classification.ipynb
results/metrics/: saved_model_eval.json
scripts/: generate_assets.py
src/: __init__.py  calibration.py  config.py  data_loader.py  evaluate.py  gradcam.py  models.py  preprocessing.py  train.py  utils.py
tests/: test_calibration.py  test_data_loader.py  test_gradcam.py  test_models.py
